# CodeAccelerate-SyclProgrammingGuide

./: .gitignore  ADDING_ATOMICS_INFO_TO_GUIDE.md  AGENTS.md  CMakeLists.txt  LICENSE  PROGRAMMING_GUIDE_IMPLEMENTATION_PLAN.md  README.md  REVISION_PLAN.md  pixi.toml
chapters/00-introduction/: README.md
chapters/01-heterogeneous-computing/: README.md
chapters/02-sycl-overview/: README.md
chapters/03-acpp-setup/: README.md
chapters/03-acpp-setup/examples/: CMakeLists.txt  hello_devices.cpp  hello_kernel.cpp
chapters/04-memory-model/: README.md
chapters/04-memory-model/examples/: CMakeLists.txt  buffer_policies.cpp  usm_vector_add.cpp
chapters/05-kernels-and-parallelism/: README.md
chapters/05-kernels-and-parallelism/examples/: CMakeLists.txt  nd_range_demo.cpp  scoped_reduction.cpp
chapters/06-acpp-extensions/: README.md
chapters/06-acpp-extensions/examples/: CMakeLists.txt  accessor_variants_demo.cpp  jit_specialized.cpp
chapters/07-performance/: README.md
chapters/07-performance/examples/: CMakeLists.txt  bandwidth_benchmark.cpp
chapters/08-footguns/: README.md
chapters/09-real-world-patterns/: README.md
chapters/09-real-world-patterns/examples/: CMakeLists.txt  jacobi_solver.cpp  matmul.cpp
chapters/10-atomics/: README.md
chapters/10-atomics/examples/: CMakeLists.txt  atomic_counter.cpp  atomic_fence_ordering.cpp  compare_exchange.cpp  fp_atomics.cpp  reduction_fetch_add.cpp
scripts/: build.nu  configure.nu  test.nu
